# chess-repertoire-optimizer

./: .gitignore  Cargo.toml  README.md
src/: conversion.rs  error.rs  main.rs  opening_book.rs  position.rs  repertoire_optimizer.rs
src/opening_book/: cache.rs  lichess.rs
